<resources>
    <string name="app_name">DairyIbadah</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">ALAMAT EMAIL</string>
    <string name="prompt_password">KATA SANDI</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="desc_login">DiaryIbadah membantu anda mencatat dan memantau progress kegiatan ibadah</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="lupa_pass">LUPA PASSWORD?</string>
    <string name="belum_punya_akun">BELUM PUNYA AKUN?</string>
    <string name="sudah_punya_akun">SUDAH PUNYA AKUN?</string>
    <string name="daftar_sekarang">DAFTAR SEKARANG</string>
    <string name="login">LOGIN</string>


    <!-- On Boarding -->
    <string name="kosong"> </string>
    <string name="skip">MULAI</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Catat Ibadah Harian</string>
    <string name="slide_1_desc">Catat semua ibadah shalat, puasa dan sedekah anda setiap hari</string>

    <string name="slide_2_title">Tingkatkan Keistiqomahan</string>
    <string name="slide_2_desc">Cek statistik keistiqomahan dan progress ibadah anda dari waktu ke waktu</string>

    <string name="slide_3_title">Alarm Ibadah Otomatis</string>
    <string name="slide_3_desc">DiaryIbadah akan mengingatkan jadwal ibadah anda secara otomatis</string>

    <string name="nama_depan">NAMA DEPAN</string>
    <string name="nama_belakang">NAMA BELAKANG</string>
    <string name="jenis_kelamin">JENIS KELAMIN</string>
    <string name="kata_sandi">KATA SANDI</string>
    <string name="ulangi_kata_sandi">ULANGI KATA SANDI</string>
    <string name="daftar">DAFTAR</string>

    <string name="selamat_datang">Selamat Datang, </string>
    <string name="desc_loc">Untuk mendapatkan jadwal sholat harian secara otomatis, silahkan atur lokasi anda saat ini</string>
    <string name="set_location_otomatis">SET LOKASI OTOMATIS</string>
    <string name="set_location_manual">PILIH LOKASI MANUAL</string>
    <string name="title_activity_menu_ibadah">MenuIbadah</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_fragment_ibadah_list">fragment_ibadah_list</string>
    <string name="title_activity_date_header">DateHeader</string>
    <string name="title_activity_details_info">DetailsInfo</string>

    <string name="desc_badah">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="waktu_pelaksanaan">Waktu Pelaksanaan</string>
    <string name="jumlah_rakaat">Jumlah Rakaat</string>
    <string name="hadits">Hadits</string>
    <string name="desc_hadits">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</string>

    <!-- Pop Up Laporan Sholat-->
    <string name="waktu_shalat">WAKTU SHOLAT</string>
    <string name="jenis_shalat">JENIS SHALAT</string>
    <string name="tempat_shalat">TEMPAT SHALAT</string>
    <string name="masukan_shalat">MASUKAN WAKTU</string>
    <string name="jumlah_rakaath">JUMLAH RAKAAT</string>
    <string name="pilih_shalat">PILIH SHALAT</string>
    <string name="otomatis_lokasi">TENTUKAN LOKASI SAYA</string>
    <string name="manual_lokasi">PILIH LOKASI MANUAL</string>
    <string name="shalat_qabliyah">SHALAT QABLIYAH</string>
    <string name="shalat_badiyah">SHALAT BADIYAH</string>
    <string name="iya">Iya</string>
    <string name="tidak">Tidak</string>
    
    <string name="kal_1">Didalam dunia Islam terdapat Keragaman Metode dalam perhitungan Jadwal Waktu Sholat, dimana perbedaan ini seharusnya disikapi dengan arif dan tidak menghukumi salah mutlak bagi orang-orang diluar jadwal waktunya.</string>
    <string name="kal_2">Metode yang digunakan untuk menghitung waktu sholat. Tiap wilayah punya metode yang berbeda. </string>
    <string name="kal_3">Disitu kita dapat memilih negara, kota dan juga metode perhitungan yang mahsyur di dunia dan negara-negara islam meliputi</string>
    <string name="kal_4">1. Metode Universitas Umul Qurro</string>
    <string name="kal_5">2. Metode Rabithah Alam Islamiy</string>
    <string name="kal_6">3. Metode Universitas Keislaman Karaci</string>
    <string name="kal_7">4. Metode Dinas Geologi Mesir</string>
    <string name="kal_8">5. Metode Federasi Islam Amerika Utara</string>

<string name="jur_1">Hanya berpengaruh pada waktu Ashar. Imam Shafii berpendapat waktu Ashar ketika tinggi bayangan sama dengan tinggi benda. Imam Hanafi berpendapat waktu Ashar ketika tinggi bayangan 2 kali tinggi benda</string>

</resources>
