<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/closeaja"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/ic_clear_black_24dp"/>

        <TextView
            android:id="@+id/sholat_wajib"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="Shalat Wajib"
            android:textAlignment="center"
            android:textColor="#616161"
            android:textSize="21dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/waktu_shalat"/>

        <EditText
            android:id="@+id/waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/jenis_shalat"/>

        <Spinner
            android:id="@+id/jenis_shalat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/tempat_shalat"/>

        <Spinner
            android:id="@+id/tempat_shalat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/shalat_qabliyah"/>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:id="@+id/shalat_qabliyah"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton android:id="@+id/ya_qabliyah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iya"/>
                    <RadioButton android:id="@+id/tidak_qabliyah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tidak"/>
                </RadioGroup>
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/shalat_badiyah"/>

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:id="@+id/shalat_badiyah"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioButton android:id="@+id/ya_badiyah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/iya"/>
                    <RadioButton android:id="@+id/tidak_badiyah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tidak"/>
                </RadioGroup>
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/simpan"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="SIMPAN"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</RelativeLayout>