<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="kukila.dailyibadah.PraLocation"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/forma"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="25dp"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/selamat_datang"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="8dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_height="wrap_content"
                android:text="Kamu"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="!"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_marginRight="@dimen/margin20"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/desc_loc"
            android:layout_marginBottom="25dp"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_otomatis"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/set_location_otomatis"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>



    <Button
        android:id="@+id/btn_manual"
        android:layout_marginTop="70dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background_white"
        android:text="@string/set_location_manual"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>



    </LinearLayout>

</RelativeLayout>
